# shelly-pro-2-mod

./: CMakeLists.txt  Readme.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ds18b20.c  ds18b20.h  idf_component.yml  main.c  mqtt.c  ota.c  shift_reg.c  shift_reg.h  wifi.c
